# rust_drone_follow

./: .gitignore  Cargo.toml  README.md
src/: geometric_point.rs  hat.rs  hat_file_reader.rs  hat_follower_settings.rs  image_processing.rs  lib.rs  lines.rs  main.rs  main_frame.rs  marker_drawer.rs  mock_controller.rs  naive_detection.rs  opencv_custom.rs  point_converter.rs  text_exporter.rs  traits.rs  video_exporter.rs  video_handler.rs
src/controllers/: mock_controller.rs  mod.rs
src/detectors/: mod.rs  naive_detection.rs  naive_detector.rs
src/filters/: memory_filter.rs  mod.rs  no_filter.rs
src/models/: geometric_point.rs  hat.rs  lab_color.rs  mod.rs
src/point_systems/: centralized.rs  mod.rs
src/utils/: hat_file_reader.rs  marker_drawer.rs  mod.rs  opencv_custom.rs  point_converter.rs  text_exporter.rs  video_exporter.rs
